Update commandId value

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
         {
             "type" : "menu",
             "label" : "Masked Image Shadows",
-            "commandId" : "myCommand",
+            "commandId" : "createDropShadow",
             "shortcut": { "mac": "Cmd+Alt+P", "win": "Ctrl+Alt+P" }
         }
     ]  
