--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,19 @@
             "type" : "menu",
             "label" : "Masked Image Shadows",
             "commandId" : "createDropShadow",
-            "shortcut": { "mac": "Cmd+Alt+P", "win": "Ctrl+Alt+P" }
+            "shortcut": { "mac": "Cmd+Alt+P", "win": "Ctrl+Alt+P" },
+            "menuItems": [
+                {
+                    "type": "menu",
+                    "label": "Run",
+                    "commandId": "createDropShadow"
+                },
+                {
+                    "type": "menu",
+                    "label": "Show alert",
+                    "commandId": "showAlert"
+                }
+            ]
         }
-    ]  
-}
+    ] 
+}              
