--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "id" : "5993ea98",
     "name" : "Masked Image Shadows",
-    "version" : "0.0.2",
+    "version" : "0.0.3",
     
     "description" : "Quickly and easily add drop shadows to masked images.",
 
@@ -22,11 +22,15 @@
         {
             "type" : "menu",
             "label" : "Masked Image Shadows",
-            "commandId" : "createDropShadow",
             "menuItems": [
                 {
                     "type": "menu",
-                    "label": "Run",
+                    "label": "Setup then Create Shadows...",
+                    "commandId": "createDropShadowSetup"
+                },
+                {
+                    "type": "menu",
+                    "label": "Create Shadows using Previous Settings",
                     "commandId": "createDropShadow",
                     "shortcut": { "mac": "Cmd+Alt+P", "win": "Ctrl+Alt+P" }
                 }
